1.3.0:
- Added option to let holograms move independently of the entity they came from (relative-holograms).
- Optimized how what players to send packets to is determined.


1.2.1:
- Fixed missing 1.17 support.


1.2.0:
- Added support for 1.19.
- Added bStats analytics.
- Added options to disable damage and heal indicators.
- Added '/di plinfo' for debugging purposes.
- Fixed config files not being regenerated under certain circumstances.
- Moved the 'messages.yml' contents to its own customizable locale file. Any changes will be migrated.


1.1.7:
- Added support for 1.18.2.


1.1.6:
- Fixed indicators not showing from player-shot arrows when 'only-show-entity-damage-from-players' is enabled.


1.1.5:
- Fixed the first damage a player does not showing an indicator.
- Fixed database requests not being run async.
- Toggle database now uses UUID's instead of names. All previous toggles will be lost.


1.1.4:
- Added support for 1.18.
- Fixed entity-type-list-as-whitelist being true by default.


1.1.3:
- Added option to only show entity damage indicators when damage is dealt by a player.
- Added entity-type whitelist/ blacklist.
- Fixed the bottom of the default help page being too short.
- Fixed tab completer returning player names in slots with no args.
- Fixed error when a player is damaged/ healed after disabling health-indicators with "/di reload".
- Fixed error when enabling health-indicators on 1.13+ servers.
- Fixed the plugin failing to load if another plugin or the server didn't initialize SQLite.
- Fixed damage modified by other plugins sometimes not updating indicators.
- Fixed packets being sent to all players no matter how far away they are.
- Fixed indicators showing to the player who's been damaged/ healed.
- Fixed health indicator not toggling if server was reloaded instead of using "/de reload".
- Optimized how indicators are handled.


1.1.2:
- Fixed a few bugs with health indicators
- Updated default messages.yml


1.1.1: