@@ -18,6 +18,8 @@ hologram-speed: 0.15
 hologram-duration: 20
 # Whether the position of holograms should stay relative to the entity they came from.
 relative-holograms: true
+# Whether you should be able to see your own holograms.
+show-self-holograms: false
 
 # Whether or not all damage indicators should be bold
 bold-indicators: true
