@@ -1,5 +1,6 @@
 1.3.0:
-- Added option to let holograms move independently of the entity they came from (relative-holograms).
+- Added option to let indicators move independently of the entity they came from (relative-holograms).
+- Added option to show your own indicators (show-self-holograms).
 - Optimized how what players to send packets to is determined.
 
 
